--- a/forms/uaboutform.lfm
+++ b/forms/uaboutform.lfm
@@ -1,17 +1,18 @@
 object AboutForm: TAboutForm
-  Left = 550
-  Height = 400
-  Top = 245
-  Width = 825
-  BorderStyle = bsSizeToolWin
+  Left = 440
+  Height = 429
+  Top = 196
+  Width = 850
+  AutoSize = True
+  BorderIcons = [biSystemMenu]
   Caption = 'О программе'
-  ClientHeight = 400
-  ClientWidth = 825
-  DesignTimePPI = 120
-  OnShow = FormShow
+  ClientHeight = 429
+  ClientWidth = 850
+  Constraints.MinHeight = 240
+  Constraints.MinWidth = 680
   Position = poScreenCenter
-  LCLVersion = '3.2.0.0'
-  object Image1: TImage
+  OnShow = FormShow
+  object LazarusImage: TImage
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = Owner
     Left = 6
@@ -19,7 +20,6 @@ object AboutForm: TAboutForm
     Top = 6
     Width = 181
     AutoSize = True
-    BorderSpacing.Bottom = 6
     BorderSpacing.Around = 6
     Picture.Data = {
       0A544A706567496D616765AB350000FFD8FFE000104A46494600010202004E00
@@ -454,64 +454,400 @@ object AboutForm: TAboutForm
       426BA48CA09083B49CE3802BCFAD53DA4DCBB9D508F2C523FFD9
     }
   end
-  object Label1: TLabel
-    AnchorSideLeft.Control = Image1
+  object AppNameLabel: TLabel
+    AnchorSideLeft.Control = LazarusImage
     AnchorSideLeft.Side = asrBottom
-    AnchorSideTop.Side = asrCenter
-    Left = 199
-    Height = 20
-    Top = 9
-    Width = 582
+    AnchorSideTop.Control = Owner
+    AnchorSideRight.Control = Owner
+    AnchorSideRight.Side = asrBottom
+    Left = 197
+    Height = 15
+    Top = 6
+    Width = 647
     Alignment = taCenter
     Anchors = [akTop, akLeft, akRight]
-    BorderSpacing.Left = 12
+    BorderSpacing.Left = 10
     BorderSpacing.Top = 6
     BorderSpacing.Right = 6
-    Caption = 'DKTechDoc v.0.0.1'
+    Caption = 'Application Name'
     Font.Style = [fsBold]
     ParentColor = False
     ParentFont = False
   end
-  object Memo1: TMemo
-    AnchorSideLeft.Control = Label1
-    AnchorSideTop.Control = Label1
+  object ProjectNoteLabel: TLabel
+    AnchorSideLeft.Control = AppNameLabel
+    AnchorSideTop.Control = AppNameLabel
     AnchorSideTop.Side = asrBottom
-    AnchorSideRight.Control = Owner
+    AnchorSideRight.Control = AppNameLabel
     AnchorSideRight.Side = asrBottom
-    AnchorSideBottom.Control = Owner
-    AnchorSideBottom.Side = asrBottom
-    Left = 199
-    Height = 341
-    Top = 53
-    Width = 620
-    Anchors = [akTop, akLeft, akRight, akBottom]
-    BorderSpacing.Top = 24
-    BorderSpacing.Right = 6
-    BorderSpacing.Bottom = 6
-    BorderStyle = bsNone
-    Color = clBtnFace
-    Lines.Strings = (
-      'Библиотека технических документов'
-      ''
-      'Проект:'
-      '     https://github.com/DmitriyKornilov/DKTechDoc'
-      ''
-      'Разработчик: '
-      '     Дмитрий Корнилов (dakor2017@yandex.ru)'
-      ''
-      'Применено:'
-      '     Free Pascal Compiler v3.2.2 (www.freepascal.org)'
-      '     Lazarus IDE v3.2 (www.lazarus-ide.org)'
-      ''
-      'PNG-файлы получены с flaticon.com,  подробности '
-      'https://github.com/DmitriyKornilov/DKTechDoc/blob/main/png/Icons_info.pdf'
-      ''
-      '      '
-      ''
-      '     '
-    )
-    ReadOnly = True
-    TabOrder = 0
-    TabStop = False
+    Left = 197
+    Height = 15
+    Top = 31
+    Width = 647
+    Anchors = [akTop, akLeft, akRight]
+    BorderSpacing.Top = 10
+    Caption = 'Project Note'
+    WordWrap = True
+  end
+  object ProjectLabel: TLabel
+    AnchorSideLeft.Control = AppNameLabel
+    AnchorSideTop.Control = ProjectNoteLabel
+    AnchorSideTop.Side = asrBottom
+    AnchorSideRight.Control = AppNameLabel
+    AnchorSideRight.Side = asrBottom
+    Left = 197
+    Height = 15
+    Top = 56
+    Width = 647
+    Anchors = [akTop, akLeft, akRight]
+    BorderSpacing.Top = 10
+    Caption = 'Проект:'
+    WordWrap = True
+  end
+  object ProjectURLLabel: TLabel
+    AnchorSideLeft.Control = AppNameLabel
+    AnchorSideTop.Control = ProjectLabel
+    AnchorSideTop.Side = asrBottom
+    AnchorSideRight.Control = AppNameLabel
+    AnchorSideRight.Side = asrBottom
+    Cursor = crHandPoint
+    Left = 213
+    Height = 15
+    Top = 74
+    Width = 631
+    Anchors = [akTop, akLeft, akRight]
+    BorderSpacing.Left = 16
+    BorderSpacing.Top = 3
+    Caption = 'link'
+    Font.Color = clNavy
+    Font.Style = [fsUnderline]
+    ParentFont = False
+    WordWrap = True
+  end
+  object AutorLabel: TLabel
+    AnchorSideLeft.Control = AppNameLabel
+    AnchorSideTop.Control = ProjectURLLabel
+    AnchorSideTop.Side = asrBottom
+    AnchorSideRight.Control = AppNameLabel
+    AnchorSideRight.Side = asrBottom
+    Left = 197
+    Height = 15
+    Top = 99
+    Width = 647
+    Anchors = [akTop, akLeft, akRight]
+    BorderSpacing.Top = 10
+    Caption = 'Разработчик:'
+    WordWrap = True
+  end
+  object AutorNameLabel: TLabel
+    AnchorSideLeft.Control = ProjectURLLabel
+    AnchorSideTop.Control = AutorLabel
+    AnchorSideTop.Side = asrBottom
+    AnchorSideRight.Control = AppNameLabel
+    AnchorSideRight.Side = asrBottom
+    Left = 213
+    Height = 15
+    Top = 117
+    Width = 65
+    BorderSpacing.Top = 3
+    Caption = 'Autor Name'
+    WordWrap = True
+  end
+  object AutorMailLabel: TLabel
+    AnchorSideLeft.Control = AutorMailBeginLabel
+    AnchorSideLeft.Side = asrBottom
+    AnchorSideTop.Control = AutorLabel
+    AnchorSideTop.Side = asrBottom
+    AnchorSideRight.Control = AppNameLabel
+    AnchorSideRight.Side = asrBottom
+    Cursor = crHandPoint
+    Left = 285
+    Height = 15
+    Top = 117
+    Width = 23
+    BorderSpacing.Top = 3
+    Caption = 'mail'
+    Font.Color = clNavy
+    Font.Style = [fsUnderline]
+    ParentFont = False
+    WordWrap = True
+  end
+  object AutorMailEndLabel: TLabel
+    AnchorSideLeft.Control = AutorMailLabel
+    AnchorSideLeft.Side = asrBottom
+    AnchorSideTop.Control = AutorLabel
+    AnchorSideTop.Side = asrBottom
+    AnchorSideRight.Control = AppNameLabel
+    AnchorSideRight.Side = asrBottom
+    Left = 308
+    Height = 15
+    Top = 117
+    Width = 4
+    BorderSpacing.Top = 3
+    Caption = ')'
+    WordWrap = True
+  end
+  object AutorMailBeginLabel: TLabel
+    AnchorSideLeft.Control = AutorNameLabel
+    AnchorSideLeft.Side = asrBottom
+    AnchorSideTop.Control = AutorLabel
+    AnchorSideTop.Side = asrBottom
+    AnchorSideRight.Control = AppNameLabel
+    AnchorSideRight.Side = asrBottom
+    Left = 278
+    Height = 15
+    Top = 117
+    Width = 7
+    BorderSpacing.Top = 3
+    Caption = ' ('
+    WordWrap = True
+  end
+  object UsedLabel: TLabel
+    AnchorSideLeft.Control = AppNameLabel
+    AnchorSideTop.Control = AutorNameLabel
+    AnchorSideTop.Side = asrBottom
+    AnchorSideRight.Control = AppNameLabel
+    AnchorSideRight.Side = asrBottom
+    Left = 197
+    Height = 15
+    Top = 142
+    Width = 647
+    Anchors = [akTop, akLeft, akRight]
+    BorderSpacing.Top = 10
+    Caption = 'Применено:'
+    WordWrap = True
+  end
+  object CompilerVerLabel: TLabel
+    AnchorSideLeft.Control = ProjectURLLabel
+    AnchorSideTop.Control = UsedLabel
+    AnchorSideTop.Side = asrBottom
+    AnchorSideRight.Control = AppNameLabel
+    AnchorSideRight.Side = asrBottom
+    Left = 213
+    Height = 15
+    Top = 160
+    Width = 49
+    BorderSpacing.Top = 3
+    Caption = 'Compiler'
+    WordWrap = True
+  end
+  object CompilerURLBeginLabel: TLabel
+    AnchorSideLeft.Control = CompilerVerLabel
+    AnchorSideLeft.Side = asrBottom
+    AnchorSideTop.Control = UsedLabel
+    AnchorSideTop.Side = asrBottom
+    AnchorSideRight.Control = AppNameLabel
+    AnchorSideRight.Side = asrBottom
+    Left = 262
+    Height = 15
+    Top = 160
+    Width = 7
+    BorderSpacing.Top = 3
+    Caption = ' ('
+    WordWrap = True
+  end
+  object CompilerURLLabel: TLabel
+    AnchorSideLeft.Control = CompilerURLBeginLabel
+    AnchorSideLeft.Side = asrBottom
+    AnchorSideTop.Control = UsedLabel
+    AnchorSideTop.Side = asrBottom
+    AnchorSideRight.Control = AppNameLabel
+    AnchorSideRight.Side = asrBottom
+    Cursor = crHandPoint
+    Left = 269
+    Height = 15
+    Top = 160
+    Width = 19
+    BorderSpacing.Top = 3
+    Caption = 'link'
+    Font.Color = clNavy
+    Font.Style = [fsUnderline]
+    ParentFont = False
+    WordWrap = True
+  end
+  object CompilerURLEndLabel: TLabel
+    AnchorSideLeft.Control = CompilerURLLabel
+    AnchorSideLeft.Side = asrBottom
+    AnchorSideTop.Control = UsedLabel
+    AnchorSideTop.Side = asrBottom
+    AnchorSideRight.Control = AppNameLabel
+    AnchorSideRight.Side = asrBottom
+    Left = 288
+    Height = 15
+    Top = 160
+    Width = 4
+    BorderSpacing.Top = 3
+    Caption = ')'
+    WordWrap = True
+  end
+  object LazarusVerLabel: TLabel
+    AnchorSideLeft.Control = ProjectURLLabel
+    AnchorSideTop.Control = CompilerVerLabel
+    AnchorSideTop.Side = asrBottom
+    AnchorSideRight.Control = AppNameLabel
+    AnchorSideRight.Side = asrBottom
+    Left = 213
+    Height = 15
+    Top = 178
+    Width = 39
+    BorderSpacing.Top = 3
+    Caption = 'Lazarus'
+    WordWrap = True
+  end
+  object LazarusURLBeginLabel: TLabel
+    AnchorSideLeft.Control = LazarusVerLabel
+    AnchorSideLeft.Side = asrBottom
+    AnchorSideTop.Control = CompilerVerLabel
+    AnchorSideTop.Side = asrBottom
+    AnchorSideRight.Control = AppNameLabel
+    AnchorSideRight.Side = asrBottom
+    Left = 252
+    Height = 15
+    Top = 178
+    Width = 7
+    BorderSpacing.Top = 3
+    Caption = ' ('
+    WordWrap = True
+  end
+  object LazarusURLLabel: TLabel
+    AnchorSideLeft.Control = LazarusURLBeginLabel
+    AnchorSideLeft.Side = asrBottom
+    AnchorSideTop.Control = CompilerVerLabel
+    AnchorSideTop.Side = asrBottom
+    AnchorSideRight.Control = AppNameLabel
+    AnchorSideRight.Side = asrBottom
+    Cursor = crHandPoint
+    Left = 259
+    Height = 15
+    Top = 178
+    Width = 19
+    BorderSpacing.Top = 3
+    Caption = 'link'
+    Font.Color = clNavy
+    Font.Style = [fsUnderline]
+    ParentFont = False
+    WordWrap = True
+  end
+  object LazarusURLEndLabel: TLabel
+    AnchorSideLeft.Control = LazarusURLLabel
+    AnchorSideLeft.Side = asrBottom
+    AnchorSideTop.Control = CompilerVerLabel
+    AnchorSideTop.Side = asrBottom
+    AnchorSideRight.Control = AppNameLabel
+    AnchorSideRight.Side = asrBottom
+    Left = 278
+    Height = 15
+    Top = 178
+    Width = 4
+    BorderSpacing.Top = 3
+    Caption = ')'
+    WordWrap = True
+  end
+  object PNGInfoLabel: TLabel
+    AnchorSideLeft.Control = AppNameLabel
+    AnchorSideTop.Control = LazarusVerLabel
+    AnchorSideTop.Side = asrBottom
+    AnchorSideRight.Control = AppNameLabel
+    AnchorSideRight.Side = asrBottom
+    Left = 197
+    Height = 15
+    Top = 203
+    Width = 647
+    Anchors = [akTop, akLeft, akRight]
+    BorderSpacing.Top = 10
+    Caption = 'PNG Info'
+    WordWrap = True
+  end
+  object PNGURLLabel: TLabel
+    AnchorSideLeft.Control = ProjectURLLabel
+    AnchorSideTop.Control = PNGInfoLabel
+    AnchorSideTop.Side = asrBottom
+    AnchorSideRight.Control = AppNameLabel
+    AnchorSideRight.Side = asrBottom
+    Cursor = crHandPoint
+    Left = 213
+    Height = 15
+    Top = 221
+    Width = 631
+    Anchors = [akTop, akLeft, akRight]
+    BorderSpacing.Top = 3
+    Caption = 'link'
+    Font.Color = clNavy
+    Font.Style = [fsUnderline]
+    ParentFont = False
+    WordWrap = True
+  end
+  object PNGURLAdd1Label: TLabel
+    AnchorSideLeft.Control = ProjectURLLabel
+    AnchorSideTop.Control = PNGURLLabel
+    AnchorSideTop.Side = asrBottom
+    AnchorSideRight.Control = AppNameLabel
+    AnchorSideRight.Side = asrBottom
+    Cursor = crHandPoint
+    Left = 213
+    Height = 15
+    Top = 236
+    Width = 631
+    Anchors = [akTop, akLeft, akRight]
+    Caption = 'link'
+    Font.Color = clNavy
+    Font.Style = [fsUnderline]
+    ParentFont = False
+    WordWrap = True
+  end
+  object PNGURLAdd2Label: TLabel
+    AnchorSideLeft.Control = ProjectURLLabel
+    AnchorSideTop.Control = PNGURLAdd1Label
+    AnchorSideTop.Side = asrBottom
+    AnchorSideRight.Control = AppNameLabel
+    AnchorSideRight.Side = asrBottom
+    Cursor = crHandPoint
+    Left = 213
+    Height = 15
+    Top = 251
+    Width = 631
+    Anchors = [akTop, akLeft, akRight]
+    Caption = 'link'
+    Font.Color = clNavy
+    Font.Style = [fsUnderline]
+    ParentFont = False
+    WordWrap = True
+  end
+  object PNGURLAdd3Label: TLabel
+    AnchorSideLeft.Control = ProjectURLLabel
+    AnchorSideTop.Control = PNGURLAdd2Label
+    AnchorSideTop.Side = asrBottom
+    AnchorSideRight.Control = AppNameLabel
+    AnchorSideRight.Side = asrBottom
+    Cursor = crHandPoint
+    Left = 213
+    Height = 15
+    Top = 266
+    Width = 631
+    Anchors = [akTop, akLeft, akRight]
+    Caption = 'link'
+    Font.Color = clNavy
+    Font.Style = [fsUnderline]
+    ParentFont = False
+    WordWrap = True
+  end
+  object PNGURLAdd4Label: TLabel
+    AnchorSideLeft.Control = ProjectURLLabel
+    AnchorSideTop.Control = PNGURLAdd3Label
+    AnchorSideTop.Side = asrBottom
+    AnchorSideRight.Control = AppNameLabel
+    AnchorSideRight.Side = asrBottom
+    Cursor = crHandPoint
+    Left = 213
+    Height = 15
+    Top = 281
+    Width = 631
+    Anchors = [akTop, akLeft, akRight]
+    BorderSpacing.Bottom = 16
+    Caption = 'link'
+    Font.Color = clNavy
+    Font.Style = [fsUnderline]
+    ParentFont = False
+    WordWrap = True
   end
 end
